[gd_scene load_steps=28 format=3 uid="uid://b61xj3scmxra2"]

[ext_resource type="Script" uid="uid://cwpdxeh23xi6u" path="res://scenes/enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://dy54fgkyqcke8" path="res://art/sprites/GOBLIN1-Sheet-idle.png" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://vje5af61y85f" path="res://art/sprites/GOBLIN1-Shee-walkt.png" id="2_4ra3w"]
[ext_resource type="PackedScene" uid="uid://bo7s8ewd7s0wy" path="res://scenes/slash.tscn" id="2_c4w8v"]
[ext_resource type="PackedScene" uid="uid://blxq40l48edsl" path="res://scenes/blood_burst.tscn" id="3_md484"]
[ext_resource type="Texture2D" uid="uid://cy2jbrjibs00h" path="res://art/sprites/goblinhurt.png" id="3_xwavj"]
[ext_resource type="Texture2D" uid="uid://daocjvvucs4qg" path="res://art/sprites/palo.png" id="4_5uy6h"]
[ext_resource type="Texture2D" uid="uid://csi1e66pf1k75" path="res://art/sprites/GOBLIN1-death.png" id="6_nenq2"]
[ext_resource type="Script" uid="uid://fs8idwdgvpd3" path="res://scripts/components/HealthComponent.gd" id="7_healthc"]
[ext_resource type="Script" path="res://scripts/components/AIComponent.gd" id="8_ai"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("6_nenq2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("6_nenq2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("6_nenq2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("3_xwavj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("3_xwavj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_md0e3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_md0e3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_md0e3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_md0e3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_4ra3w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_4ra3w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_4ra3w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_4ra3w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_4ra3w")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_4ra3w")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5uy6h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 0.3,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_md484")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4w8v"]
size = Vector2(14, 15)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_4ra3w")
slash_scene = ExtResource("2_c4w8v")
blood_scene = ExtResource("3_md484")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("7_healthc")


[node name="AIComponent" type="Node" parent="."]
script = ExtResource("8_ai")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5uy6h")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_c4w8v")

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="WeaponSprite" type="Sprite2D" parent="WeaponPivot"]
texture = ExtResource("4_5uy6h")
offset = Vector2(12, 0)

[node name="SlashSpawn" type="Marker2D" parent="WeaponPivot"]
position = Vector2(20, 0)
